...

    HonpassDatabase _db = HonpassDatabase();

    final accountsViewMode = AccountsViewModel(AccountRepository(_db), ServiceRepository(_db));

    return Scaffold(
      key: Key('home_screen'),
      appBar: AppBar(
        title: Text(_TITLE),
      ),
      // TODO: 後からログイン・バージョン・ライセンス情報などを追加する
      drawer: Drawer(
        child: ListView.separated(
...
      body: ChangeNotifierProvider.value(
        value: accountsViewMode,
        child: AccountsWidget(),
      ),
      floatingActionButton: FloatingActionButton(
        onPressed: _addAccount,
        key: Key('floating_action_button'),
        child: Icon(Icons.add),
      )
    );
  }
}
