...
    final accountRepository = AccountRepository(db);

    final serviceViewModel = ServiceViewModel(serviceRepository);
    final accountViewModel = AccountViewModel(accountRepository);

    return Scaffold(
      key: Key('account_screen'),
      appBar: AppBar(
        leading: IconButton(
          icon: Icon(Icons.arrow_back_ios),
          onPressed: () {
            Navigator.pop(context);
          },
        ),
        actions: <Widget>[
          IconButton(
            key: Key('done'),
            icon: Icon(Icons.done),
            onPressed: () {

              final selectedServiceId = serviceViewModel.selected?.id;

              if (selectedServiceId == null) {
...
