...

  @override
  Widget build(BuildContext context) {

    return Consumer<ServiceViewModel>(builder: (context, viewModel, _) {
      return DropdownButton<Service>(
          key: Key('service_drop_down'),
          value: viewModel.selected,
          items: viewModel
              .items
              .map<DropdownMenuItem<Service>>((Service value) {

                List<Widget> widgets;
...
